# lafere

./: Cargo.toml  README.md
.github/workflows/: audit.yaml  ci.yaml
fire-protobuf/: Cargo.toml  README.md
fire-protobuf-codegen/: Cargo.toml
fire-protobuf-codegen/src/: attr.rs  decode.rs  encode.rs  lib.rs  util.rs
fire-protobuf/src/: decode.rs  encode.rs  lib.rs  test_util.rs  tests.rs  varint.rs
fire-protobuf/tests/: basic_test.rs
fire-stream/: CHANGELOG.md  Cargo.toml  INTERNAL.md  README.md
fire-stream-api/: CHANGELOG.md  Cargo.toml  README.md
fire-stream-api-codegen/: Cargo.toml
fire-stream-api-codegen/src/: action.rs  api.rs  args.rs  lib.rs  message.rs  util.rs
fire-stream-api/src/: client.rs  encdec.rs  error.rs  lib.rs  message.rs  request.rs  server.rs  util.rs
fire-stream-api/tests/: advanced.rs  complete.rs
fire-stream/examples/: request_response.rs
fire-stream/src/: client.rs  error.rs  lib.rs  listener.rs  pinned_future.rs  plain.rs  poll_fn.rs  server.rs  timeout.rs
fire-stream/src/basic/: client.rs  message.rs  mod.rs  request.rs  server.rs
fire-stream/src/encrypted/: handshake.rs  stream.rs
fire-stream/src/handler/: client.rs  mod.rs  server.rs
fire-stream/src/packet/: body_bytes.rs  builder.rs  bytes.rs  encrypted_bytes.rs  mod.rs  packet.rs  test.rs
fire-stream/src/plain/: mod.rs
fire-stream/src/standalone_util/: mod.rs  poll_fn.rs
fire-stream/src/util/: bg_task.rs  listener.rs  mod.rs  testing.rs
lafere/: CHANGELOG.md  Cargo.toml  INTERNAL.md
lafere-api/: Cargo.toml
lafere-api-codegen/: Cargo.toml
lafere-api-codegen/src/: action.rs  api.rs  args.rs  enable_server_requests.rs  lib.rs  message.rs  util.rs
lafere-api/src/: client.rs  encdec.rs  error.rs  lib.rs  message.rs  request.rs  request_handlers.rs  requestor.rs  server.rs  util.rs
lafere-api/tests/: advanced.rs  complete.rs  server_requests.rs
lafere/examples/: request_response.rs  server_requests.rs
lafere/src/: client.rs  error.rs  lib.rs  server.rs
lafere/src/encrypted/: handshake.rs  mod.rs  stream.rs
lafere/src/handler/: client.rs  handler.rs  mod.rs  receiver.rs  sender.rs  server.rs
lafere/src/packet/: body_bytes.rs  builder.rs  bytes.rs  encrypted_bytes.rs  mod.rs  packet.rs  test.rs
lafere/src/plain/: mod.rs
lafere/src/standalone_util/: mod.rs  pinned_future.rs  poll_fn.rs
lafere/src/util/: bg_task.rs  listener.rs  mod.rs  testing.rs  timeout.rs  watch.rs
protopuffer/: Cargo.toml  README.md  typerepresentation.md
protopuffer-codegen/: Cargo.toml
protopuffer-codegen/src/: attr.rs  decode.rs  encode.rs  lib.rs  util.rs
protopuffer/src/: decode.rs  encode.rs  lib.rs  test_util.rs  tests.rs  varint.rs
protopuffer/tests/: basic_test.rs
