[package]
name = "fire-protobuf-codegen"
description = "Rust only protobuf implementation"
version = "0.1.4"
authors = ["Sören meier <info@soerenmeier.ch>"]
repository = "https://github.com/fire-lib/fire-stream"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.67"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-crate = "2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]