[package]
name = "fire-stream-api"
description = "A more or less simple communication protocol library."
version = "0.1.2"
authors = ["Sören meier <info@soerenmeier.ch>"]
repository = "https://github.com/fire-lib/fire-stream"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58"

[[test]]
name = "complete"
required-features = ["encrypted"]

[features]
encrypted = ["crypto", "stream/encrypted"]

[dependencies]
stream = { package = "fire-stream", version = "0.2", path = "./../fire-stream", features = ["json"] }
crypto = { package = "fire-crypto", version = "0.3", features = ["cipher", "signature"], optional = true }
bytes = { package = "simple-bytes", version = "0.2.6" }
tokio = { version = "1.0", features = ["net", "io-util", "time", "sync"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }

[dev-dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "time", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
