[package]
name = "fire-stream-api"
description = "A more or less simple communication protocol library."
version = "0.2.4"
authors = ["Sören meier <info@soerenmeier.ch>"]
repository = "https://github.com/fire-lib/fire-stream"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58"

[[test]]
name = "complete"
required-features = ["encrypted"]

[features]
default = ["connection"]
connection = ["tokio", "stream/connection"]
encrypted = ["crypto", "stream/encrypted"]
json = ["stream/json", "serde", "serde_json"]
protobuf = ["fire-protobuf"]

[dependencies]
stream = { package = "fire-stream", version = "0.3.1", path = "./../fire-stream", default-features = false }
crypto = { package = "fire-crypto", version = "0.3", features = ["cipher", "signature"], optional = true }
bytes = { package = "simple-bytes", version = "0.2.6" }
tokio = { version = "1.0", features = ["net", "io-util", "time", "sync"], optional = true }
codegen = { package = "fire-stream-api-codegen", version = "0.1", path  = "./../fire-stream-api-codegen" }

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

fire-protobuf = { version = "0.1", path = "./../fire-protobuf", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "time", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]