[package]
name = "fire-stream"
description = "A more or less simple communication protocol library."
version = "0.3.1"
authors = ["Sören meier <info@soerenmeier.ch>"]
repository = "https://github.com/fire-lib/fire-stream"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58"

[[example]]
name = "request_response"
test = true
required-features = ["connection"]

[features]
default = ["connection"]
connection = ["tokio"]
json = ["serde", "serde_json"]
fs = ["tokio/fs"]
encrypted = ["crypto"]

[dependencies]
crypto = { package = "fire-crypto", version = "0.3.1", features = ["cipher", "signature"], optional = true }
bytes = { package = "simple-bytes", version = "0.2.11" }
tokio = { version = "1.0", features = ["net", "io-util", "rt", "time", "sync", "macros"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "time", "macros", "sync"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]