[package]
name = "lafere-api-codegen"
description = "Codegen for lafere api"
version = "0.1.0"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/chuchi-dev/lafere"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.67"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-crate = "2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
