[package]
name = "lafere-api-codegen"
description = "Codegen for lafere api"
version = "0.2.0-pre.1"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/chuchi-dev/lafere"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-crate = "3.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
